# Hanasu

./: README.md
Hanasu/: CMakeLists.txt
Hanasu/server/: CMakeLists.txt  DB.cpp  DB.hpp  Session.cpp  Session.hpp  main.cpp
HanasuCommon/: CMakeLists.txt
HanasuCommon/include/: AckException.h  ErrnoException.h  Exception.h  Log.h  Protocol.hpp  Serialize.hpp  Socket.h  VersionException.h  hash.hpp  types.h
HanasuCommon/src/: Log.cpp  Protocol.cpp  Serialize.cpp  Socket.cpp  hash.cpp
HanasuGui/: AddFriendPopup.qml  Alert.qml  Circle.qml  Conv.qml  ConvDel.qml  FriendList.qml  HanasuGui.pro  Icon.js  Login.qml  Makefile  MaterialButton.qml  Menubar.qml  MsgsDel.qml  NewMsg.qml  Placeholder.qml  Register.qml  WaitPopup.qml  controler.cpp  controler.h  conversationlist.cpp  conversations.cpp  conversations.h  friendsmodel.cpp  friendsmodel.h  main.cpp  main.qml  messages.cpp  messages.h  qml.qrc
HanasuProto/: Register.pb.cc  Register.pb.h  Register.proto
HanasuTest/: CMakeLists.txt  main.cpp
